# qdk

./: .gitignore  .prettierignore  Atom-teleport.ipynb  BLOCH_TODO.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Ising.ipynb  NOTES.collapse.md  NOTES.md  PRIVATE_API_LEAKAGE_REPORT.md  README.md  benzene_model_hamiltonian_qpe.ipynb  benzene_model_hamiltonian_qpe_outputs.ipynb  branch-analysis-cuddly-barnacle.md  branch-analysis.md  build.py  cgmanifest.json  clippy.toml  demo-script.md  demo_script.md  demo_script_v2.md  eslint.config.mjs  feedback.md  generate_catalog.py  katas_proposal.md  katas_proposal_circuit_diagrams.md  katas_proposal_circuit_editor.md  katas_proposal_docs_viewer.md  katas_proposal_histograms.md  katas_proposal_resource_estimation.md  learning-transcript.md  package-lock.json  package.json  performance_logging.py  prereqs.py  pyrightconfig.json  qdk-copilot-transcript.md  version.py  watch.mjs
katas/: Cargo.toml
katas/content/getting_started/: index.md
katas/content/multi_qubit_gates/: index.md
katas/content/multi_qubit_systems/: index.md
katas/content/qec_shor/: Common.qs
katas/content/single_qubit_gates/: index.md
katas/content/superdense_coding/: index.md
katas/src/: lib.rs  tests.rs
katas/test_cases/apply_x_openqasm/: Correct.qasm  Incorrect.qasm
source/compiler/qsc_fir_transforms/: Cargo.toml  README.md
source/compiler/qsc_llvm/: Cargo.toml
source/compiler/qsc_openqasm_compiler/: Cargo.toml  README.md
source/compiler/qsc_openqasm_parser/: Cargo.toml  README.md
source/compiler/stim_compiler/: Cargo.toml
source/paulimer/: Cargo.toml
source/paulimer/benches/: bitmatrix_benchmark.rs  pauli_benchmark.rs
source/paulimer/src/: bipartite_normal_form.rs  bits.rs  clifford.rs  lib.rs  main.rs  operations.rs  outcome_complete_simulation.rs  outcome_specific_simulation.rs  pauli.rs  quantum_core.rs  setwise.rs  utils.rs
source/paulimer/tests/: bipartite_normal_form_tests.rs  bit_test.rs  bitblock_test.rs  bitmatrix_test.proptest-regressions  bitmatrix_test.rs  bitvec_test.proptest-regressions  bitvec_test.rs  clifford_test.rs  pauli_test.proptest-regressions  pauli_test.rs  simulation_test.rs  utils_tests.rs
source/pip/: Cargo.toml  README.md  generate_docs.py  generate_docs_requirements.txt  pyproject.toml  test_requirements.txt
source/pip/benchmarks/: bench_qre.py
source/pip/docs/: Makefile  README.md  conf.py  index.rst  make.bat  requirements.txt
source/pip/qsharp/: __init__.py  _adaptive_bytecode.py  _adaptive_opcodes.py  _adaptive_pass.py  _fs.py  _http.py  _ipython.py  _native.py  _native.pyi  _noise.py  _qir_circuit.py  _qir_utils.py  _qsharp.py  _session.py  _simulation.py  _types.py  telemetry.py  telemetry_events.py
source/pip/src/: fs.rs  interop.rs  interpreter.rs  lib.rs  noisy_simulator.rs  qir_circuit.rs  qir_simulation.rs  qre.rs
source/pip/tests/: test_adaptive_cpu_bytecode.py  test_adaptive_cpu_noise.py  test_adaptive_cpu_quantum_ops.py  test_adaptive_gpu_bytecode.py  test_adaptive_gpu_noise.py  test_adaptive_gpu_quantum_ops.py  test_adaptive_pass.py  test_callable_passing.py  test_clifford_simulator.py  test_correlated_noise.py  test_cpu_simulator.py  test_enums.py  test_generic_estimator.py  test_gpu_simulator.py  test_interpreter.py  test_noisy_config.py  test_noisy_simulator.py  test_project.py  test_qasm.py  test_qdk.py  test_qir_circuit.py  test_qre.py  test_qre_models.py  test_qsharp.py  test_qsharp_shim.py  test_re.py  test_re_models.py  test_session.py  test_simulators_gates_noiseless.py  test_simulators_gates_noisy.py  test_sparse_simulator.py
source/pip/tests-integration/: test_adaptive_rifla_qir.py  test_base_qir.py  test_requirements.txt
source/qdk-mcp/: pyproject.toml  test-server.py
source/qdk-mcp/app/: index.html  package-lock.json  package.json  vite.config.ts
source/qdk_openqasm/: Cargo.toml  README.md
source/qdk_openqasm/benches/: corpus.rs  qasm_pipeline.rs
source/qdk_openqasm/parser/: Cargo.toml  README.md
source/qdk_openqasm/python/: Cargo.toml  check_api_surface.py  pyproject.toml  test_requirements.txt
source/qdk_openqasm/src/: error.rs  io.rs  keyword.rs  lex.rs  lib.rs  parser.rs  semantic.rs  source.rs  tests.rs  unparse.rs  vendor.rs
source/qdk_openqasm_parser/: Cargo.toml  README.md
source/qdk_openqasm_parser/benches/: corpus.rs  qasm_pipeline.rs
source/qdk_openqasm_parser/src/: error.rs  lib.rs  parser.rs  semantic.rs  tests.rs  vendor.rs
source/qdk_package/: .gitignore  API_SURFACE.md  Cargo.toml  PR_DESCRIPTION.md  README.md  check_api_surface.py  check_requirements.txt  pyproject.toml  test_requirements.txt
source/qdk_package/benchmarks/: bench_openqasm_semantic_memory.py  bench_qre.py
source/qdk_package/qdk/: __init__.py  _adaptive_bytecode.py  _adaptive_pass.py  _context.py  _fs.py  _interpreter.py  _ipython.py  _native.pyi  _qsharp.py  _session.py  _test_helper.py  _types.py  cirq.py  estimator.py  internal.py  openqasm.py  qiskit.py  qsharp.py  simulation.py  telemetry.py  test_utils.py  widgets.py
source/qdk_package/src/: interop.rs  interpreter.rs  lib.rs  noisy_simulator.rs  openqasm.rs  qasm_ast.rs  qir_simulation.rs  qre.rs
source/qdk_package/tests/: .gitignore  CliffordCalls.qs  CliffordIsing.qs  conftest.py  mocks.py  test_adaptive_cpu_bytecode.py  test_adaptive_cpu_noise.py  test_adaptive_cpu_quantum_ops.py  test_adaptive_gpu_bytecode.py  test_adaptive_gpu_noise.py  test_adaptive_gpu_quantum_ops.py  test_adaptive_pass.py  test_callable_passing.py  test_clifford_simulator.py  test_context.py  test_correlated_noise.py  test_cpu_simulator.py  test_enums.py  test_extras.py  test_generic_estimator.py  test_gpu_simulator.py  test_interpreter.py  (+24 more)
source/qdk_package/tests-integration/: .gitignore  __init__.py  conftest.py  test_adaptive_qir.py  test_adaptive_ri_qir.py  test_adaptive_rif_qir.py  test_adaptive_rifla_qir.py  test_base_qir.py  test_libraries.py  test_requirements.txt  utils.py
source/qre/: Cargo.toml
source/simulators/: Cargo.toml  TODO.md
source/stabilizer_simulator/: Cargo.toml
source/wasm/: Cargo.toml
(+2932 files in other folders)
