[package]
name = "katas"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
qsc = { path = "../source/compiler/qsc" }
qsc_codegen = { path = "../source/compiler/qsc_codegen" }
qsc_openqasm_compiler = { path = "../source/compiler/qsc_openqasm_compiler" }

[lints]
workspace = true

[lib]
doctest = false
