[project]
name = "qsharp"
version = "0.0.0"
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
jupyterlab = ["qsharp-jupyterlab"]
widgets = ["qsharp-widgets"]
qiskit = ["qiskit>=1.2.2,<3.0.0"]
cirq = ["cirq-core>=1.6.1,<1.7"]
qre = ["cirq-core==1.6.1,<1.7", "pandas>=2.1", "ply>=3.11", "pyqir<0.12"]

[build-system]
requires = ["maturin ~= 1.10.2"]
build-backend = "maturin"

[tool.maturin]
module-name = "qsharp._native"
