[project]
name = "qsharp"
version = "0.0.0"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = ["qdk==0.0.0"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
jupyterlab = ["qdk[jupyter]"]
widgets = ["qdk[jupyter]"]
jupyter = ["qdk[jupyter]"]
qiskit = ["qdk[qiskit]"]
cirq = ["qdk[cirq]"]
qre = ["qdk[qre]"]
azure = ["qdk[azure]"]
applications = ["qdk[applications]"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build*"]
