[package]
name = "qre"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustc-hash = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
