[package]
name = "qre"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
qsc = { path = "../compiler/qsc" }
miette = { workspace = true }
num-traits = { workspace = true }
rustc-hash = { workspace = true }
probability = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }


[dev-dependencies]
indoc = { workspace = true }

[lints]
workspace = true
