[package]
name = "qdk_simulators"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
quantum-sparse-sim = { workspace = true }
stabilizer_simulator = { path = "../stabilizer_simulator" }
bytemuck = { workspace = true }
futures = { workspace = true }
wgpu = { workspace = true }
rand = { workspace = true }
num-bigint = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
criterion = { workspace = true}
rand = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false

[profile.bench]
debug = true
strip = false
lto = true

[[bench]]
name = "gpu"
harness = false
