[package]
name = "qdk_simulators"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
quantum-sparse-sim = { workspace = true }
bytemuck = { workspace = true }
futures = { workspace = true }
wgpu = { workspace = true }
rand = { workspace = true }
num-bigint = { workspace = true }
smallvec = { workspace = true }
paulimer = { path = "../paulimer" }

[dev-dependencies]
expect-test = { workspace = true }
criterion = { workspace = true}


[lints]
workspace = true

[lib]
doctest = false

[target.'cfg(target_os="linux")'.dev-dependencies]
iai-callgrind = { workspace = true }

[[bench]]
name = "sim_time"
harness = false

[[bench]]
name = "sim_time_noisy"
harness = false

[[bench]]
name = "sim_mem"
harness = false

# [[bench]]
# name = "gpu"
# harness = false

[[bin]]
name = "gpu-runner"
path = "src/bin/gpu-runner.rs"
