[package]
name = "qsc_openqasm_compiler"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
indenter = { workspace = true }
num-bigint = { workspace = true }
miette = { workspace = true }
qsc_ast = { path = "../qsc_ast" }
qsc_data_structures = { path = "../qsc_data_structures" }
qsc_frontend = { path = "../qsc_frontend" }
qsc_openqasm_parser = { path = "../qsc_openqasm_parser" }
qsc_hir = { path = "../qsc_hir" }
rustc-hash = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["cargo_bench_support"] }
difference = { workspace = true }
expect-test = { workspace = true }
indoc = { workspace = true }
miette = { workspace = true, features = ["fancy-no-syscall"] }
# Self import adding fs feature so that we can test
# loading qasm from file.
qsc = { path = "../qsc" }
qsc_passes = { path = "../qsc_passes" }

[lints]
workspace = true

[lib]
bench = false

[[bench]]
name = "rgqft_multiplier"
harness = false
