[package]
name = "stim_compiler"
edition.workspace = true
version.workspace = true

[dependencies]
enum-iterator.workspace = true
qdk_simulators = { path = "../../simulators" }
qsc_data_structures = { path = "../qsc_data_structures" }
rustc-hash = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
